# ha-daikin-brc1h

./: .devcontainer.json  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  ha-daikin-brc1h.sublime-project  hacs.json  pyproject.toml  requirements.txt
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug.yml  feature_request.yml
.github/ISSUE_TEMPLATE.disabled/: bug.yml
.github/workflows/: validate.yml
config/: configuration.yaml
custom_components/daikin_brc1h/: __init__.py  api.py  climate.py  config_flow.py  const.py  coordinator.py  data.py  entity.py  manifest.json  retry.py
custom_components/daikin_brc1h/translations/: en.json
scripts/: develop
