[project]
name = 'ha-kadoma'
version = '0.0.0'
requires-python = '>= 3.13'
dependencies = [
    "kadoma>=0.0.1"
]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "pre-commit>=4.2.0",
    "ruff>=0.11.13",
    "homeassistant>=2025.1.0",
]

[tool.black]
target-version = ['py313']

[tool.isort]
profile = "black"

[tool.mypy]
files = ["custom_components/daikin_brc1h"]

[tool.pyupgrade]
addopts = "--py313-plus"

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = [
    "ALL",
]
ignore = [
    "ERA001", # Commented-out code
    "ANN401", # Dynamically typed expressions (typing.Any) are disallowed
    "D203", # no-blank-line-before-class (incompatible with formatter)
    "D212", # multi-line-summary-first-line (incompatible with formatter)
    "COM812", # incompatible with formatter
    "ISC001", # incompatible with formatter
]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.ruff.lint.mccabe]
max-complexity = 25
