[project]
name = 'ha-daikin-brc1h'
version = '0.0.0'
dependencies = [
    "certifi>=2025.4.26",
    "homeassistant>=2025.1.0",
    "kadoma>=0.0.3.dev0",
]
license = "MIT"
license-files = ["LICENSE" ]
requires-python = '>= 3.13'

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "pre-commit>=4.2.0",
    "ruff>=0.11.13",
]

# [build-system]
# requires = ["setuptools>=40.8.0", "wheel"]
# build-backend = "setuptools.build_meta"

# [tool.setuptools]
# packages = ["custom_components/daikin_brc1h"]

[tool.black]
target-version = ["py313"]

[tool.isort]
profile = "black"

[tool.mypy]
files = ["custom_components/daikin_brc1h"]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = [
    "ALL",
]
ignore = [
    "ANN401", # dynamically typed expressions (typing.Any) are disallowed
    "COM812", # incompatible with formatter
    "D203",   # no-blank-line-before-class (incompatible with formatter)
    "D212",   # multi-line-summary-first-line (incompatible with formatter)
    "ISC001", # incompatible with formatter
    # daikin_rc1h
    "ANN002", # Missing type annotation for `*args`
    "ANN003", # Missing type annotation for `**kwargs`
    "ARG002", # Unused method argument: `kwargs`
    "ARG002", # Unused method argument: `kwargs`
    "D102",   # missing doc strings
    "FIX002", # Line contains TODO, consider resolving the issue
    "TD002", # Missing author in TODO
    "TD003", # Missing issue link for this TODO
    "TD005", # Missing issue description after `TODO`
    "D401",   # doc strings
    "ERA001", # commented-out code
    "G004",   # Logging statement uses f-string
    "PLR0913", # Too many arguments in function definition
    "TRY300", # Consider moving this statement to an `else` block
]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false

[tool.ruff.lint.mccabe]
max-complexity = 25

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.pyupgrade]
addopts = "--py313-plus"
